--- a/main.html
+++ b/main.html
@@ -52,22 +52,22 @@
             <h2>Оказываемые услуги</h2>
             <ul>
                 <li>Front-end
-                    <ul>
+                    <ul class = "main-list">
                         <li>Современный UI/UX дизайн и тщательно продуманная разработка интерфейса приложений.</li>
                     </ul>
                 </li>
                 <li>Back-end
-                    <ul>
+                    <ul class = "main-list">
                         <li>Понятный код, хорошо структурированные процессы и надежная работа сервера.</li>
                     </ul>
                 </li>
                 <li>Мобильная разработка
-                    <ul>
+                    <ul class = "main-list">
                         <li>Адаптация интерфейса приложения для его удобного и эффективного использования на всех мобильных платформах.</li>
                     </ul>
                 </li>
                 <li>Услуги DevOps
-                    <ul>
+                    <ul class = "main-list">
                         <li>Снижение расходов на поддержку и развитие ПО за счет грамотной организации взаимодействия инженеров.</li>
                     </ul>
                 </li>
@@ -82,11 +82,12 @@
                     <label for="email">Электронная почта:</label>
                     <input type="email" id="email" name="email">
                     <label for="comment">Комментарий:</label>
-                    <input id="comment" name="comment"></textarea>
+                    <textarea id="comment" name="comment"></textarea>
                 </fieldset> 
-                <button type="submit">Отправить</button>
+                <button class="bt-form" type="submit">Отправить</button>
             </form>
         </section>
+        
         <section>
             <h2>Видео-презентация</h2>
             <video src="video.mp4" controls>            
@@ -96,7 +97,7 @@
     </main>
     <footer>
         <p>&copy; 2025 Программирование. Все права защищены.</p>
-        <nav>
+        <nav class = "services">
             <a href="https://vk.com">ВКонтакте</a>
             <a href="https://www.facebook.com">Facebook</a>
             <a href="https://www.twitter.com">Twitter</a>
