--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Веб-сайт о программировании">
     <meta name="keywords" content="программирование, код, разработка">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
 
     <title>О компании</title>
