--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                 </tbody>
             </table>
         </section>
+        <section class="gallery">
+            <img src="contact-picture.jpg" alt="Галерея изображений" width="480" height="280">
+            <div class="controls">
+                <button id="prev">Предыдущее</button>
+                <button id="next">Следующее</button>
+            </div>
+        </section>
+        <button id = "openModal">Показать всплывающее окно</button>
     </main>
     
     
@@ -67,5 +75,6 @@
     <footer>
         <p>&copy; 2025 Программирование. Все права защищены.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
